[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Business.gd" type="Script" id=1]
[ext_resource path="res://Sprites/PNG/panel_blue.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/licensed/frame_highlighted.png" type="Texture" id=4]
[ext_resource path="res://Scenes/CraftingRecipe.tscn" type="PackedScene" id=5]

[node name="Business" type="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 602.0
margin_bottom = 431.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]
workers = 0
business_name = "Business"
business_lvl = 1

[node name="Background" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="Inventory" parent="." index="1" instance=ExtResource( 3 )]

margin_left = 330.0
margin_top = 13.0
margin_right = 497.0
margin_bottom = 129.0

[node name="MetaInfo" type="Container" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 7.0
margin_right = 203.0
margin_bottom = 211.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="NinePatchRect" type="NinePatchRect" parent="MetaInfo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
_sections_unfolded = [ "Patch Margin" ]

[node name="TitleLabel" type="RichTextLabel" parent="MetaInfo" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 65.0
margin_top = 6.0
margin_right = 149.0
margin_bottom = 46.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Business"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Business"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MetaInfo" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 43.0
margin_right = 185.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="OwnerLabel" type="RichTextLabel" parent="MetaInfo/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 172.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Owner"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Owner"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="Profession" type="RichTextLabel" parent="MetaInfo/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 172.0
margin_bottom = 44.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Profession"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Profession"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="WorkersLabel" type="RichTextLabel" parent="MetaInfo/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 172.0
margin_bottom = 68.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Workers"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Workers"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="StatusLabel" type="RichTextLabel" parent="MetaInfo/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 172.0
margin_bottom = 92.0
rect_min_size = Vector2( 20, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "Business Level"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Business Level"
scroll_active = false
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Rect" ]

[node name="NewWorkerButton" type="Button" parent="MetaInfo/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 172.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Recruit New Worker"
flat = false
align = 1

[node name="Crafting" type="Container" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_top = 206.0
margin_right = 585.0
margin_bottom = 417.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Crafting" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Crafting/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 332.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="CraftingRecipe" parent="Crafting/ScrollContainer/VBoxContainer" index="0" instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="5"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="MetaInfo/VBoxContainer/NewWorkerButton" to="." method="_on_NewWorkerButton_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


